# chess_replay_rs

./: Cargo.toml  LICENSE  README.md  wasm-pack-and-copy-over_dev  wasm-pack-and-copy-over_release
docs/: index.html
docs/src/: index.js
docs/src/chess_logic/: chess_logic_wasm.d.ts  chess_logic_wasm.js  chess_logic_wasm_bg.wasm  chess_logic_wasm_bg.wasm.d.ts  package.json
docs/src/decode_chess_wasm/: decode_chess_wasm.d.ts  decode_chess_wasm.js  decode_chess_wasm_bg.wasm  decode_chess_wasm_bg.wasm.d.ts  package.json
docs/src/libs/: babel-browser-build.js  knockout-3.5.1.js
docs/styles/: page.css
workspace/chess/: Cargo.toml
workspace/chess/src/: lib.rs
workspace/chess/src/base/: a_move.rs  mod.rs
workspace/chess/src/figure/: mod.rs
workspace/chess/src/figure/functions/: allowed.rs  check_search.rs  checkmate.rs  is_reachable_by.rs  mod.rs  reachable.rs
workspace/chess/src/game/: board.rs  board_state.rs  game_state.rs  mod.rs
workspace/logic_core/: Cargo.toml
workspace/logic_core/src/: lib.rs
workspace/logic_core/src/base/: a_move.rs  mod.rs  position.rs  rc_list.rs
workspace/logic_core/src/figure/functions/: allowed.rs  check_search.rs  checkmate.rs  reachable.rs
workspace/logic_core/src/game/: board.rs  board_state.rs  game_state.rs  mod.rs
workspace/wasm/: Cargo.toml
workspace/wasm/src/: lib.rs
