[package]
name = "logic_core"
version = "0.0.1"
authors = ["StephanS <simon.void+github@gmail.com>"]
description = "logic to verify that chess moves are valid"
license = "MIT"
repository = "https://github.com/simon-void/voidchess_engine_rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinyvec  = { version = "1.6.0", features = ["alloc"] }

[dev-dependencies]
rstest = "0.18.2"

